--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -1,37 +1,38 @@
 \documentclass[12pt]{article}
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 %\usepackage{url}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage[numbers, sort&compress]{natbib}
-\bibliographystyle{abbrvnat}
+\bibliographystyle{unsrt}
 %\usepackage{citeref}  %Not avail on linux.unm.edu; makes page #s in biblio
 %\usepackage{graphicx}
 %\usepackage{multicol}
 
 \author{Christian Gunning}
-\title{Research Program}
+\title{Quantitative Population Ecology}
 %\date{\today}
 \begin{document}
-\maketitle
+%\maketitle
 \thispagestyle{empty}
 \linespread{1.25}\selectfont
 %% a statement of activities contributing to diversity, equity and inclusion in Academia
 
-Ecological systems are inherently non-linear and stochastic, while observational
-processes are often poorly characterized.  To identify deterministic needles in
-the haystacks of real-world systems, I use 
-mechanistic simulation models to {\em predict} dynamics from theory, and
-statistical models to match observation to simulation. I also use
-macroecological approaches to identify conserved scaling relationships
-within systems. Throughout, I seek the causal determinants of aggregate 
-system behavior using the simplest possible explanations.
-My primary focus is on the spatiotemporal dynamics of real-world 
-populations and metapopulations. Combining ecological theory with 
-empirical observation, my work explores non-linear stochastic 
-population processes,
-including invasion and persistence, metapopulation synchrony,
-and population responses to perturbation.
-
+My research explores the spatiotemporal dynamics 
+of real-world populations and metapopulations. 
+My primary focus is on discrete, stochastic, and non-linear processes,
+including invasion and persistence, and population responses to perturbation.
+%while observational processes are often poorly characterized. 
+I use mechanistic simulation 
+models to {\em predict} dynamics from theory, and statistical models 
+to match empirical observations to simulation.
+I also use models to estimate and account for incomplete 
+observation, which commonly distorts empirical datasets.
+Finally, I employ macroecological approaches 
+to identify conserved scaling relationships in 
+data, which I then test against ecological theory and 
+simulation models. Throughout, I seek the causal determinants of
+aggregate population behavior using the simplest 
+possible explanations.
 
 %, and demographic founder events such
 %as colonization and development of resistance. 
@@ -39,92 +40,107 @@ and population responses to perturbation.
 To date, my work has focused largely on childhood diseases in the pre-vaccine
 era. Human disease ecology provides an attractive study system, leveraging
 extensive public health observational infrastructure while fulfilling the scientific
-imperative towards public benifit. During my Ph.D.\ work with Dr. Helen Wearing
+imperative towards public benifit. During my Ph.D.\ work with Helen Wearing
 at UNM, I employed seed grant funding to design, implement, and staff a
 technology-assisted data entry program that transcribed historical U.S.\ public
 health reports. The end result is more than 20 years of weekly measles and
-pertussis case reports in some 80 cities and 35 states, along with influenza
-case and death reports and associated demographic records.  Using this
+pertussis case reports in 80 cities and 35 states, influenza
+case and death reports, and associated demographic records.  Using this
 dataset, I have demonstrated the effects of spatial and temoral aggregation on
-metapopulation stochastic extinction \citep{gunning2013probabilistic},
-and shown the obscuring effects of incomplete observation \citep{gunning2014conserved}. 
-%which can aid further modern disease control efforts.  
+metapopulation stochastic extinction \citep{gunning2013probabilistic}.
+I have shown the obscuring effects of incomplete observation
+in disease reporting \citep{gunning2014conserved}, and its close correlation 
+with socioeconomic covariates. Combining these estimates of incomplete reporting
+with epidemic theory and statistical models, I have shown that cryptic 
+disease presence commonly occurs, and is likely affected by disease life
+history \citep{gunning2016cryptic}.  
 In the future, I plan to characterize the (pre-vaccine era) dependence of influenze
-death reports on case reports, allowing for a clearer interpretation and better
-leveraging of historical records. I also plan to collaborate with Dr.
-Micaela E. Martinez, now at Princeton University, to compare the geographical
-and socioeconomic determinants of epidemic timing between a range of 
+death reports on case reports, allowing for a clearer interpretation 
+of historical records. I also plan to collaborate with 
+Micaela Martinez, now at Princeton University, to compare the geographical
+and socioeconomic determinants of epidemic timing between 
 infectious human diseases, including influenza, measles, and pertussis.
 
-My post-doctoral work has focused on the population ecology and vector biology
-of the {\em Aedes aegypti} mosquito with Drs. Fred Gould and Alun Lloyd at NCSU.
+Taken together, this work complements modern public 
+health research on one hand, and theoretical disease modeling on the other.
+The fields of public health and epidemiology are frequently results-oriented, 
+seeking immediate solutions to particular problems. 
+Theoretical disease modeling, on the other hand, commonly makes simplifying 
+assumptions to better focus on particular aspects of ecological theory.
+My research aims to bridge this
+gap by drawing ecological theory into the public health forum, and by
+facilitating a more robust empirical validation of theory-driven disease 
+models.
+
+My post-doctoral work, with Fred Gould and Alun Lloyd at NCSU, has focused 
+on the population ecology of the {\em Aedes aegypti} mosquito.
 {\em Aedes aegypti} is the primary vector of a disturbing array of human
 diseases, including dengue, chikungunya, and zika, yet its basic biology remains
-poorly characterized. Along with Drs. Gould and Lloyd and Dr. Amy Morrison, I
-have played an active role in the large, multi-agency Projecto Dengue in
-Iquitos, Peru, led by Dr. Tom Scott of UC Davis.  In pursuit of effective {\em
-Aedes aegypti} control measures, Projecto Dengue has conducted several
-large-scale urban field trials, including indoor insecticide spraying.  These
-field trials provide a unique window into the urban population ecology of {\em Aedes}.
-Here, we have observed signatures of non-linear, density-dependent responses to human
-perturbation, along with the possible spread of insecticide resistence.
+poorly characterized. Projecto Dengue is a long-term, multi-agency project
+based in Iquitos, Peru that seeks effective vector control strategies. 
+Under the direction of Tom Scott, UC Davis, Projecto Dengue has conducted 
+a large, multi-year urban field 
+trial of indoor insecticide spraying.  In Iquitos, we observe non-linear, 
+density-dependent responses of adult mosquito populations to human
+perturbations, along with suggestions of emerging insecticide resistence.
+This field trial provides a unique window into the urban population ecology of {\em
+Aedes}, while raising fundamental questions about the long-term efficacy of 
+chemical population control. 
 
-During this project, I have provided valuable leadership 
-in field trial data management, reconciling complex and sometimes 
+My role in Projecto Dengue has included data management,
+where I reconciled complex and sometimes 
 contradictory data streams into a cohesive picture of mosquito
-population dynamics.  Using this dataset, I have led hypothesis design,
+population dynamics. In addition, I have led data visualization,
 statistical analysis, and manuscript preparation.
-This dataset is also being used to parameterized 
-a detailed, agent-based simulation model Skeeter Buster
+The above dataset is also being used to parameterized 
+the agent-based simulation model Skeeter Buster
 \citep{magori2009skeeter, okamoto2013reduce}. 
-While Skeeter Buster long pre-dates my time in the Gould-Lloyd group,
+Skeeter Buster pre-dates my time in the Gould-Lloyd group; nonetheless,
 I have led its continued development, including model validation and
 integration of field data.
 
-The Iquitos vector control field trials also yield a uniquely detailed glimpse 
-into landscape level {\em Aedes} population dynamics. In particular, 
-the rate and intensity of {\em Aedes} migration over urban landscapes 
-remains poorly characterized, and yet has wide-ranging effects on, for example,
-control efforts and insecticide resistance prevention. I
-plan to collaborate with Dr. Gould's graduate student, Jennifer Baltzegar, in
-using modern genotype-by-sequencing methods to characterize rates of local
-migration, census population size, and local population responses to transient 
-vector control. In this way, we will combine spatiotemporal records of
-spraying and sampling with cost-effective next-generation sequencing
-of tissue samples to infer landscape-level population processes.
+The rate and intensity of {\em Aedes} migration over urban landscapes 
+remains poorly characterized, and yet has wide-ranging human impacts on
+control efforts and insecticide resistance prevention.
+I plan to leverage the rich Projecto Dengue dataset 
+to elucidate landscape level {\em Aedes} population dynamics 
+through a collaboration with Fred Gould and Jennifer Baltzegar at NCSU,
+Dr. Gould's lab has expertise with modern genotype-by-sequencing (GBS) 
+methods in insects (i.e., ddRADseq). We will combine existing 
+spatiotemporal records of spraying and insect sample collection with 
+GBS-derived haplotype data to infer landscape-level population processes, 
+including migration rates census population size, and population responses 
+to transient vector control.
 
-At NCSU, I've played an active role in an ongoing group collaboration 
-that uses simulation models combining population
-dynamics with population genetics. This project aims to
-characterize the performance of vector control strategies that employ so-called
-``gene drives''.  Here, engineered organisms are released to reduce wild pest
-populations through high genetic load, or to replace wild populations with a
-pathogen-resistant strain.  The subject of intense modern scrutiny, gene drives
-differ widely in design and intended performance.  Our work uses simple models
-to identify ecological uncertainties with proposed genetic constructs and
-associated release plans.
+At NCSU, I've played an active role in an ongoing collaboration 
+that evaluates the performance of vector control strategies employing 
+so-called {\em gene drives}. Here, engineered organisms contain genetic 
+constructs that cause biased inheritance, driving the construct through
+a population.  These organisms can be released to
+reduce wild pest populations through high genetic load, or to replace 
+wild populations, e.g., with a pathogen-resistant engineered strain. 
+The subject of intense scrutiny, gene drives differ 
+widely in design and intended performance. Using simple models 
+that combine population ecology with population genetics, this collaboration 
+aims to identify ecological uncertainties with proposed genetic 
+constructs, along with possible reversal options \citep{vella2016evaluating}.
 
-
-collaborate - Erik, Jim, SFI / Geoff West / Clio
-
-Looking to the future, I see a number of promising research
-opportunities in non-equilibrium population ecology. Lyme disease 
-presence is increasing throughout the mid-West, and yet has come 
-late to Michigan, whose unique
-penisular geography has potentially slowing disease invasion \citep{hamer2010invasion}. 
-As such, researchers at the University of Michigan have a front-row seat 
-for a virgin soil invasion of a highly visible human pathogen.
-With this in mind, I plan to pursue a collaborative and/or graduate student led
-project on the invasion biology of {\em Ixodes scapularis} and Lyme disease
-prevalence.  The highly visible and much-discussed invasion of non-native
-garlic mustard, {\em Alliaria petiolata}, provides an excellent opportunity 
-for citizen science participation in population control studies.  
-Government outreach provides public guidance on non-weed control efforts, 
-yet are citizen efforts effective? This system provides an excellent 
-test case for the role public outreach can play in shaping local 
-ecology, while increasing spatiotemporal monitoring of an ongoing non-native 
-invasion. I would also look forward to a collaboration modeling and 
-monitoring the effectiveness of biological control programs \citep{evans2012importance}.
+Looking to the future, I see a number of promising ecological research
+opportunities in non-equilibrium population dynamics at the University
+of Michigan. Lyme disease presence is now increasing throughout the 
+mid-West, and yet has come late to Michigan, whose unique
+penisular geography appears to have slowed disease invasion \citep{hamer2010invasion}. 
+Ongoing monitoring of tick populations at the Edwin S. George Reserve (ESGR)
+could reveal a virgin soil invasion of this highly visible human pathogen.
+I would welcome a collaboration or graduate student project using ESGR resources 
+to explore the invasion biology of {\em Ixodes scapularis}, particularly in 
+response to urbaninzation.  Another disruptive ecological invader in Michigan 
+is garlic mustard, {\em Alliaria petiolata}. Garlic mustard provides an 
+excellent opportunity for citizens to participation in 
+population control studies, and to increase spatiotemporal 
+monitoring of an ongoing non-native invasion. 
+I would also welcome a collaboration that both models and 
+monitors the effectiveness of a biological control programs \citep{evans2012importance}.
 
 We live in a world awash with data, from novel remote sensing 
 capabilities such as the NSF's National Ecological Observatory 
@@ -133,26 +149,25 @@ Yet translating this flood of data into {\em knowledge}
 remains challenging.  One of my great strengths is the
 ability to rapidly integrate large, complex, and often messy 
 data assemblages into cohesive, archival-quality databases.
-I thrive in such data-rich systems, using the best tools
-available to rapidly explore and visualize system processes,
-translating observations into testable hypotheses.
+I thrive in these data-rich systems, using the best available 
+tools to visualize system processes, and then
+translate observations into testable hypotheses.
 In this way, my work is dominated by an iterative relationship 
 between ecological theory and empirical data. 
 
-I use cutting-edge quantitative tools, including 
-SQL for data management, the R languages for data visualization,
+I use cutting-edge open source computational tools, including 
+SQL for data management, the R languages for data visualization
 and statistical modeling, and C++ for high-performance simulation
-modeling.  I am also a strong proponent of open science and reproducible 
-research methods, and I find that using open source software
-tools and careful documentation increases the efficiency 
-and quality of my work. It also enhances collaborative 
-opportunities by allowing others to quickly and faithfully 
-assimilate, reproduce and participate in my research. 
-A reproducible workflow also facilititates student 
-collaboration, encouraging individual contribution and 
-experimentation along with personal accountability. 
-Want to know who fixed that ugly bug? Just check the git logs. 
-Someone's edits broke the project? {\texttt git revert}.
+modeling. I am a strong proponent of open science and reproducible 
+research methods. Using open source software
+and careful documentation practice, I have increased the efficiency 
+and overall quality of my work, while enhancing collaborative 
+opportunities. A reproducible workflow also facilititates student 
+collaboration, facilitating both experimentation and 
+accountability. 
+Want to know who fixed that bug? Just check the git logs. 
+Someone's edits broke the project? No worries, just do 
+{\texttt git revert}.
 
 As a quantitative ecologist, I draw 
 methodology and metaphor from a range of disciplines, including 
@@ -163,16 +178,9 @@ climactic datasets with ecological observation, I have broad
 and detailed understanding of modern biological systems 
 theory.
 
-
 %From Markov processes and ergodic theory to information theory 
 %and statistical modeling, I employ a diverse yet robust 
 %conceptual toolset to 
-
-
-
-
-, information-theoretic 
-
 
 \bibliography{statement}
 
