--- a/statements/statement.bib
+++ b/statements/statement.bib
@@ -88,7 +88,7 @@ Ragavendran, Ashok and Landis, Douglas A and Schemske, Douglas W},
 
 @article{gunning2013probabilistic,
   title={{Probabilistic measures of persistence and extinction in measles (meta)populations}},
-  author={Gunning, C.E. and Wearing, H.J.},
+  author={\textbf{Gunning, C.E.} and Wearing, H.J.},
   journal={Ecol. Lett.},
   year={2013},
   volume={16},
@@ -98,7 +98,7 @@ Ragavendran, Ashok and Landis, Douglas A and Schemske, Douglas W},
 
 @article{gunning2014conserved,
   title={Conserved patterns of incomplete reporting in pre-vaccine era childhood diseases},
-  author={Gunning, C.E. and Erhardt, E. and Wearing, H.J.},
+  author={\textbf{Gunning, C.E.} and Erhardt, E. and Wearing, H.J.},
   longauthor={Gunning, Christian E and Erhardt, Erik and Wearing, Helen J},
   longjournal={Proceedings of the Royal Society B: Biological Sciences},
   journal={Proc. R. Soc. B},
@@ -107,4 +107,20 @@ Ragavendran, Ashok and Landis, Douglas A and Schemske, Douglas W},
   pages={20140886},
   year={2014},
   publisher={The Royal Society}
+}
+
+@article{gunning2016cryptic,
+  title={Evidence of cryptic incidence in childhood diseases},
+  author={\textbf{Gunning, C.E.} and Ferrari, M.J. and Erhardt, E. and Wearing, H.J.},
+  longjournal={Proceedings of the Royal Society B: Biological Sciences},
+  journal={In Submission},
+  year={2016}
+}
+
+M.R. Vella†, C.E. Gunning, A.L. Lloyd, F. Gould. Evaluating strategies for reversing CRISPR-Cas9 gene drives.
+@article{vella2016evaluating,
+  title={Evaluating strategies for reversing CRISPR-Cas9 gene drives},
+  author={Vella, M.R. and \textbf{Gunning, C.E.} and Lloyd, A.L and Gould, F.}, 
+  journal={In Review},
+  year={2016}
 }
