Rework executive statement: math methods, teaching

--- a/cv/cv_201612.tex
+++ b/cv/cv_201612.tex
@@ -48,31 +48,41 @@
 \begin{rSection}{Executive Summary}
 %\begin{itemize}
 \item 
-My research examines the spatiotemporal dynamics of real-world populations. 
-I focus on systems and processes that are discrete, stochastic,
-and non-linear. As a quantitative ecologist, I draw 
-inspiration and methodology from a range of disciplines, including 
-chemistry, physics, and mathematics.
-I use empirical data, numerical simulations, and modern statistical methods to
-identify key determinants of population dynamics.  I am especially interested
-in stochastic extinction and persistence, population responses to
-perturbation, and demographic founder events such
-as colonization and insecticide resistance. At present, my study systems 
-include childhood diseases in the pre-vaccine era U.S., and mosquito population 
-dynamics in Iquitos, Peru.
+My research explores the spatiotemporal dynamics of
+real-world systems that are discrete, stochastic, and
+non-linear.  My primary focus is on population dynamics of
+disease systems, where I use empirical data, numerical
+simulations, and statistical models to elucidate ecological
+mechanisms. My work draws upon the theory and methodology of
+mathematics, statistics, and computer science, as well as
+chemistry, physics, and earth sciences. I am especially
+interested in stochastic extinction and persistence,
+partially observed stochastic processes, and population
+responses to perturbation. At present, my study systems
+include childhood diseases in the pre-vaccine era U.S., and
+mosquito population dynamics in Iquitos, Peru.
 
-\item I employ a range of open source computing 
-tools in my research, including the R and C++ programming languages 
-for data visualization,
-numerical simulation, and statistical modeling, and SQL for 
-advanced data management. I also employ reproducible research tools and 
-best practices.
+\item I have extensive experience with linear and
+generalized linear modeling, bootstrap-based uncertainty
+quantification, frequency-domain and wavelet-based time
+series analysis, dynamical system simulation using both ODEs
+and Markov chains, and stochastic optimization. I also have
+a broad background in machine learning, as well as computer
+data structures and algorithms.  I employ a range of open
+source computing tools in my research, including the R and
+C++ programming languages for data visualization, numerical
+simulation, and statistical modeling, and SQL for data
+management.  I also employ reproducible research tools and
+best practices, including revision control.
 
-\item I have extensive experience teaching quantitative skills to students from diverse
-backgrounds and experience levels. I believe that rigorous quantitative training is 
-critical for next generation of data-driven scientists. In particular, I aim to increase
-student access to probability and statistics, scientific programming,
-and reproducible research methods.
+\item In the classroom, I use real-world examples and
+student-led inquiry to teach quantitative skills to students
+from diverse backgrounds and experience levels. I believe
+that rigorous quantitative training is critical for next
+generation of data-driven scientists. In particular, I aim
+to increase student access to and personal investment in
+probability and statistics, scientific programming, and
+reproducible research methods.
 
 \end{rSection}
 
