--- a/cv/cv_201612.tex
+++ b/cv/cv_201612.tex
@@ -182,6 +182,7 @@ Biochemistry and Molecular Biology}{Athens, GA}
 \end{rSubsection}
 \end{rSection}
 
+\clearpage
 \begin{rSection}{Grants}
 \item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Grant to attend SFI Complex Systems Summer School.
 \item May 2010 (\$500). EEID Conference Workshop travel grant.
@@ -288,12 +289,9 @@ Disease conference
 \end{rSubsection}
 \end{rSection}
 
-\newpage
-
 \begin{rSection}{Mentoring}
 \item Spring 2015 - present. Robert Liberatore, Math Education Software Developer
 \item Fall 2015 - present. Michael Vella, NCSU Mathematics Ph.D. Student
-\item Fall 2015 - Fall 2016. Gabriel Zilnik, NCSU Entomology Masters Student
 \item Fall 2015 - Fall 2016. Gabriel Zilnik, NCSU Entomology Masters Student
 \item Fall 2012 - Fall 2015. Joshua Nightingale, UNM Biology Undergraduate Student
 \item Spring 2011 - Spring 2012. Nathan Cournoyer, UNM Biology Undergraduate Student
@@ -331,6 +329,7 @@ and Workshop.  Cornell University.  Ithica, NY.
 \item Grant reader, Graduate Research Allocations Committee (GRAC). UNM Biology.
 \end{rSection}
 
+\clearpage
 \begin{rSection}{Software Development}
 \item Fall 2014 - Present. Develop and maintain Skeeter Buster: a stochastic,
 spatially-explicit, agent-based C++ simulation model of {\em Aedes aegypti}
@@ -339,8 +338,8 @@ population dynamics.
 specifications of Drs. J. M. Rowland and C. Qualls for \texttt{discrimArts}: R package for probability
 distribution estimation.
 \item 2010 - 2012, ongoing. Contributor to \texttt{Rcpp}: R package for C++ development.
-\item 2009-2012. Maintainer of \texttt{Rwave}: R package for continuous wavelet transforms.
-\item 2010-2011. Contributor to \texttt{xts} and \texttt{zoo}: R packages for time series handling and analysis.
+\item 2009 - 2012. Maintainer of \texttt{Rwave}: R package for continuous wavelet transforms.
+\item 2010 - 2011. Contributor to \texttt{xts} and \texttt{zoo}: R packages for time series handling and analysis.
 \end{rSection}
 
 \begin{rSection}{References}
