--- a/cv/cv_201612.tex
+++ b/cv/cv_201612.tex
@@ -57,7 +57,7 @@ mechanisms. My work draws upon the theory and methodology of
 mathematics, statistics, and computer science, as well as
 chemistry, physics, and earth sciences. I am especially
 interested in stochastic extinction and persistence,
-partially observed stochastic processes, and population
+partially observed Markov processes, and population
 responses to perturbation. At present, my study systems
 include childhood diseases in the pre-vaccine era U.S., and
 mosquito population dynamics in Iquitos, Peru.
