Edits from Nat. Shorten exec summary.

--- a/cv/cv_201705.tex
+++ b/cv/cv_201705.tex
@@ -48,41 +48,25 @@
 \begin{rSection}{Executive Summary}
 %\begin{itemize}
 \item 
-My research explores the ecological determinants of 
-real-world population dynamics. I use empirical data, numerical
-simulations, and statistical models to elucidate ecological
-mechanisms. My work draws upon the theory and methodology of
-mathematics, statistics, and computer science, as well as
-chemistry, physics, and earth sciences. I am especially
-interested in stochastic extinction and persistence,
-partially observed Markov processes, and population
-responses to perturbation. At present, my study systems
-include childhood diseases in the pre-vaccine era U.S., and
-mosquito population dynamics in Iquitos, Peru.
+My research explores the ecological determinants of real-world population
+dynamics by combining empirical data, numerical simulations, and statistical
+models.  I am especially interested in stochastic extinction and persistence,
+partially observed Markov processes, and population responses to perturbation.
+At present, my study systems include childhood diseases in the pre-vaccine era
+U.S., and mosquito population dynamics in Iquitos, Peru.
 
-\item My core areas of expertise include: 
-mechanistic ecological simulation models;
-stochastic processes; data visualization;
-numerical programming;
-time series spectral analysis;
-and linear and generalized linear modeling.
-I am also interested in automated data acquisition and 
-remote sensing. I employ a range of open
-source computing tools: the R and
-C++ programming languages; PostgreSQL and SQLite database 
-systems; and the geospatial tools PostGIS and QGIS.
-I employ reproducible research tools and
-best practices, including revision control with git.
+\item My core areas of expertise include: mechanistic dynamical simulations;
+stochastic processes; data visualization; numerical programming; time series
+spectral analysis; and generalized linear modeling.  I favor open source
+computing tools: the R and C++ programming languages; PostgreSQL and SQLite
+database systems; and the geospatial tools PostGIS and QGIS.  I employ
+reproducible research tools and best practices, including revision control with
+git.
 
-\item  I enjoy teaching and mentoring 
-students from diverse backgrounds and experience levels. 
-My teaching and mentorship focuses on quantitative skills,
-where I favor real-world examples and student-led inquiry. 
-I believe that rigorous quantitative training is critical for next
-generation of data-driven scientists. I aim
-to increase student access to and personal investment in
-probability and statistics, scientific programming, and
-reproducible research methods.
+\item  I enjoy teaching and mentoring students from diverse backgrounds and
+experience levels, with a focus on quantitative skills, real-world examples, and
+student-led inquiry.  I believe that rigorous quantitative training is vital
+to the next generation of data-driven scientists.
 
 \end{rSection}
 
@@ -125,7 +109,7 @@ Mentee co-author: $\dagger$
 {\bf C.E. Gunning}, M.J Ferrari, E. Erhardt, H.J. Wearing.
 Evidence of cryptic incidence in childhood diseases. 
 Preprint available at \url{http://biorxiv.org/content/early/2016/10/04/079194}.
-Proc. R. Soc. B (In Review).
+Proceedings of the Royal Society B (In Review).
 
 M.R. Vella$\dagger$, {\bf C.E. Gunning}, A.L. Lloyd, F. Gould.
 Evaluating strategies for reversing CRISPR-Cas9 gene drives.
@@ -154,7 +138,7 @@ on request.
 \begin{rSubsection}{Post-doctoral Researcher}{Oct 2014 - Present}{Departments of
 Entomology and Mathematics, NCSU}{Raleigh, NC}
 \item Data integration, visualization, and statistical analysis of {\em Aedes aegypti} field spraying trials in Iquitos, Peru
-\item Continue development of Skeeter Buster of {\em Aedes aegypti} population dynamics simulation model
+\item Continue development of Skeeter Buster, the {\em Aedes aegypti} population dynamics simulation model
 \item Mentor graduate students in Mathematics and Entomology
 \end{rSubsection}
 
